src/VrmlData/VrmlData_DataMapOfShapeAppearance.hxx
@@ -20,44 +20,6 @@
 #include <VrmlData_Appearance.hxx>
 #include <TopoDS_TShape.hxx>
 
-/**
- * Data Map that provides the link between each Shape obtained in VRML import
- * and the corresponding Appearance.
- */
-class VrmlData_DataMapOfShapeAppearance
-  : public NCollection_DataMap<Handle(TopoDS_TShape), Handle(VrmlData_Appearance)>
-{
-public:
-  //! Constructor
-  inline VrmlData_DataMapOfShapeAppearance
-                (const Standard_Integer                   NbBuckets=1,
-                 const Handle(NCollection_BaseAllocator)& theAllocator = 0L)
-    :  NCollection_DataMap<Handle(TopoDS_TShape),
-                           Handle(VrmlData_Appearance)> (NbBuckets, theAllocator)
-  {}
-
-  //! Copy constructor
-  inline VrmlData_DataMapOfShapeAppearance
-                (const VrmlData_DataMapOfShapeAppearance& theOther)
-    :  NCollection_DataMap<Handle(TopoDS_TShape),
-                           Handle(VrmlData_Appearance)> (theOther)
-  {}
-  
-  
-  friend Standard_Boolean IsEqual (const Handle(TopoDS_TShape)& one,
-                                   const Handle(TopoDS_TShape)& two);
-
-};
-
-//=======================================================================
-//function : IsEqual
-//purpose  : for NCollection_DataMap interface
-//=======================================================================
-inline Standard_Boolean IsEqual (const Handle(TopoDS_TShape)& one,
-                                 const Handle(TopoDS_TShape)& two) 
-{
-  return one == two;
-}
-
+typedef NCollection_DataMap<Handle(TopoDS_TShape), Handle(VrmlData_Appearance)> VrmlData_DataMapOfShapeAppearance;
 
 #endif
